# tape_book

./: .gitignore  AGENTS.MD  CLAUDE.MD  CMakeLists.txt  README.md  REMEDIATION_SPEC.md  SPILL_POOL_SPEC.md
bench/: CMakeLists.txt  bench_harness.hpp  bench_main.cpp  reference_books.hpp  workloads.hpp
include/tape_book/: book.hpp  config.hpp  multi_book_pool.hpp  spill_buffer.hpp  spill_pool.hpp  tape.hpp  tape_book.hpp  types.hpp
scripts/: sync_single_include.sh
single_include/: tape_book.hpp
tests/: CMakeLists.txt  fuzz_helpers.hpp  test_book_basic.cpp  test_fuzz.cpp  test_multi_book_pool.cpp  test_spill_pool.cpp
